--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,10 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  image_cropper: ^3.0.1
+  image_picker: ^0.8.6
   intl: ^0.17.0
+  path_provider: ^2.0.11
   photo_view: ^0.14.0
 
 dev_dependencies:
