--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   intl: ^0.17.0
   path_provider: ^2.0.11
   photo_view: ^0.14.0
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
