--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
           repository: ${{ github.repository }}
           excludes: prerelease, draft
       - name: Generate changelog since last published release
-        uses: ardalanamini/auto-changelog@v3.3.3
+        uses: charmixer/auto-changelog-action@5c6320ae4dedc8743e4439a3c56294c294553fb9
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           future_release: ${{ needs.auto-gen-tag.outputs.tag }}
