--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: grex_ds
 description: Grex Design System for Flutter.
-version: 0.0.2
+version: 0.0.3
 homepage: https://grex.com.br
 repository: https://github.com/grex-corp/grex_ds_flutter
 
@@ -20,6 +20,7 @@ dependencies:
   path_provider: ^2.0.11
   photo_view: ^0.14.0
   shimmer: ^2.0.0
+  rounded_loading_button: ^2.1.0
 
 dev_dependencies:
   flutter_test:
