--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: grex_ds
 description: Grex Design System for Flutter.
-version: 0.0.4
+version: 0.0.5
 homepage: https://grex.com.br
 repository: https://github.com/grex-corp/grex_ds_flutter
 
@@ -21,6 +21,7 @@ dependencies:
   photo_view: ^0.14.0
   shimmer: ^2.0.0
   rounded_loading_button: ^2.1.0
+  another_flushbar: ^1.12.29
 
 dev_dependencies:
   flutter_test:
