--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,8 @@ dependencies:
   shimmer: ^2.0.0
   rounded_loading_button: ^2.1.0
   another_flushbar: ^1.12.29
-  intl: ^0.18.1
+  intl: ^0.17.0
+  flutter_svg: ^2.0.5
 
 dev_dependencies:
   flutter_test:
