--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   another_flushbar: ^1.12.29
   intl: ^0.17.0
   flutter_svg: ^2.0.5
+  linkify: ^4.1.0
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
