--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,34 +5,33 @@ homepage: https://grex.com.br
 repository: https://github.com/grex-corp/grex_ds_flutter
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
-  flutter: '>=1.17.0'
+  sdk: ^3.7.0
 
 dependencies:
   flutter:
     sdk: flutter
 
-  cached_network_image: ^3.3.1
-  image_cropper: ^5.0.1
-  image_picker: ^1.0.7
-  path_provider: ^2.1.2
-  photo_view: ^0.14.0
+  cached_network_image: ^3.4.1
+  image_cropper: ^9.0.0
+  image_picker: ^1.1.2
+  path_provider: ^2.1.5
+  photo_view: ^0.15.0
   shimmer: ^3.0.0
   rounded_loading_button_plus: ^3.0.1
   delightful_toast: ^1.1.0
-  intl: ^0.18.1
-  flutter_svg: ^2.0.10+1
+  intl: ^0.19.0
+  flutter_svg: ^2.0.17
   linkify: ^5.0.0
-  url_launcher: ^6.2.5
+  url_launcher: ^6.3.1
   mask_text_input_formatter: ^2.9.0
-  popover: ^0.3.0
-  infinite_scroll_pagination: ^4.0.0
+  popover: ^0.3.1
+  infinite_scroll_pagination: ^5.0.0
   super_sliver_list: ^0.4.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
