--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,12 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Create Release
 
 # Controls when the workflow will run
 on:
   push:
-    branches: [main]
+    branches: [ main ]
+    types: [opened, synchronize, reopened, labeled, unlabeled]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -71,25 +72,3 @@ jobs:
           body_path: CHANGELOG.md
           draft: false
           prerelease: false
-
-  tests:
-    name: Run Automated Tests
-    needs: create-release
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v5
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.x'
-      - name: Install dependencies
-        run: flutter pub get
-      - name: Run tests
-        run: flutter test
-
-  publish:
-    name: Upload package to pub.dev
-    needs: tests
-    uses: dart-lang/ecosystem/.github/workflows/publish.yaml@main
-    permissions:
-      id-token: write
-      pull-requests: write
