--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,7 @@ name: Publish Package
 # Controls when the workflow will run
 on:
   push:
-    tags: ['v*']
+    tags: [ 'v[0-9]+.[0-9]+.[0-9]+' ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
