--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,12 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Publish Package
+name: Publish
 
 # Controls when the workflow will run
 on:
+  pull_request:
+    branches: [ main ]
+    types: [opened, synchronize, reopened, labeled, unlabeled]
   push:
     tags: ['v*']
 
@@ -32,3 +35,6 @@ jobs:
     permissions:
       id-token: write
       pull-requests: write
+    with:
+       write-comments: false
+       use-flutter: true
