--- a/sample/ios/Runner/Info.plist
+++ b/sample/ios/Runner/Info.plist
@@ -25,11 +25,13 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>User can take photos to use as avatar</string>
+	<string>Este aplicativo precisa de acesso à câmera para você poder tirar fotos do seu perfil</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Este aplicativo precisa de acesso à galeria para você poder selecionar fotos do seu perfil</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Este aplicativo precisa de acesso à galeria para você poder selecionar fotos do seu perfil</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>User can record videos to store on the app</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>User can select their photos to use as avatar</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
