--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: grex_ds
 description: Grex Design System for Flutter.
-version: 0.1.1
+version: 0.1.2
 homepage: https://grex.com.br
 repository: https://github.com/grex-corp/grex_ds_flutter
 
@@ -28,6 +28,7 @@ dependencies:
   popover: ^0.3.1
   infinite_scroll_pagination: ^5.0.0
   flutter_libphonenumber: ^2.4.0
+  device_info_plus: ^12.1.0
 
 dev_dependencies:
   flutter_test:
